--- a/templates/assets/css.latte
+++ b/templates/assets/css.latte
@@ -1,21 +1,21 @@
 <!-- Icon -->
-<link rel="shortcut icon" href="{$tools ? '../'}assets/img/icon/favicon.ico" type="image/x-icon">
-<link rel="icon" href="{$tools ? '../'}assets/img/icon/favicon.ico" type="image/x-icon">
-<link rel="apple-touch-icon" sizes="180x180" href="{$tools ? '../'}assets/img/icon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="{$tools ? '../'}assets/img/icon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="192x192" href="{$tools ? '../'}assets/img/icon/android-chrome-192x192.png">
-<link rel="icon" type="image/png" sizes="16x16" href="{$tools ? '../'}assets/img/icon/favicon-16x16.png">
+<link rel="shortcut icon" href="{base_url()}assets/img/icon/favicon.ico" type="image/x-icon">
+<link rel="icon" href="{base_url()}assets/img/icon/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" sizes="180x180" href="{base_url()}assets/img/icon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="{base_url()}assets/img/icon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="192x192" href="{base_url()}assets/img/icon/android-chrome-192x192.png">
+<link rel="icon" type="image/png" sizes="16x16" href="{base_url()}assets/img/icon/favicon-16x16.png">
 <!-- Css -->
-<link rel="stylesheet" href="{$tools ? '../'}assets/plugins/fontawesome/css/all.min.css" type="text/css">
-<link rel="stylesheet" href="{$tools ? '../'}assets/css/sb-admin-2.min.css" type="text/css">
-<link rel="stylesheet" href="{$tools ? '../'}assets/plugins/sweetalert2/dist/sweetalert2.min.css">
-<link rel="stylesheet" href="{$tools ? '../'}assets/plugins/waves/dist/waves.min.css">
-<link rel="stylesheet" href="{$tools ? '../'}assets/css/style.css" type="text/css">
+<link rel="stylesheet" href="{base_url()}assets/plugins/fontawesome/css/all.min.css" type="text/css">
+<link rel="stylesheet" href="{base_url()}assets/css/sb-admin-2.min.css" type="text/css">
+<link rel="stylesheet" href="{base_url()}assets/plugins/sweetalert2/dist/sweetalert2.min.css">
+<link rel="stylesheet" href="{base_url()}assets/plugins/waves/dist/waves.min.css">
+<link rel="stylesheet" href="{base_url()}assets/css/style.css" type="text/css">
 <!-- Font -->
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
 <!-- Load Javascript -->
-<script src="{$tools ? '../'}assets/plugins/jquery/jquery.min.js"></script>
-<script src="{$tools ? '../'}assets/plugins/bsvalidator/dist/jquery.validate.min.js"></script>
-<script src="{$tools ? '../'}assets/plugins/sweetalert2/dist/sweetalert2.all.min.js"></script>
-<script src="{$tools ? '../'}assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-<script src="{$tools ? '../'}assets/plugins/waves/dist/waves.min.js"></script>
+<script src="{base_url()}assets/plugins/jquery/jquery.min.js"></script>
+<script src="{base_url()}assets/plugins/bsvalidator/dist/jquery.validate.min.js"></script>
+<script src="{base_url()}assets/plugins/sweetalert2/dist/sweetalert2.all.min.js"></script>
+<script src="{base_url()}assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+<script src="{base_url()}assets/plugins/waves/dist/waves.min.js"></script>
