--- a/templates/layout/_sidebar.latte
+++ b/templates/layout/_sidebar.latte
@@ -1,8 +1,8 @@
 <!-- // SidebarOpen -->
 <ul id="accordinSidebar" class="toggled navbar-nav sidebar accordin">
-	<a class="sidebar-brand d-flex justify-content-center align-items-center" href="/">
+	<a class="sidebar-brand d-flex justify-content-center align-items-center" href="{base_url()}">
 		<div class="sidebar-brand-icon">
-				<img class="img-circle img-brand" src="{$tools ? '../'}assets/img/logo.jpg" alt="Logo">
+				<img class="img-circle img-brand" src="{base_url()}assets/img/logo.jpg" alt="Logo">
 		</div>
 		<span class="sidebar-brand-text mx-3">BlackCoderCrush</span>
 	</a>
@@ -22,23 +22,23 @@
 		<div id="collapseSosmed" class="collapse" data-parent="#accordinSidebar">
 			<div class="collapse-inner rounded py-2 bg-light">
 				<h5 class="collapse-header">Sosmed Tools</h5>
-				<a class="collapse-item" href="/tools/ytdown">
+				<a class="collapse-item" href="{base_url()}tools/ytdown">
 					<i class="fab fa-youtube"></i>
 					<span>Youtube Downloader</span>
 				</a>
-				<a class="collapse-item" href="/tools/igdown">
+				<a class="collapse-item" href="{base_url()}tools/igdown">
 					<i class="fab fa-instagram"></i>
 					<span>Instagram Downloader</span>
 				</a>
-				<a class="collapse-item" href="/tools/fbdown">
+				<a class="collapse-item" href="{base_url()}tools/fbdown">
 					<i class="fab fa-facebook"></i>
 					<span>Facebook Downloader</span>
 				</a>
-				<a class="collapse-item" href="/tools/twitterdown">
+				<a class="collapse-item" href="{base_url()}tools/twitterdown">
 					<i class="fab fa-twitter"></i>
 					<span>Twitter Downloader</span>
 				</a>
-				<a class="collapse-item" href="/tools/tiktokdown">
+				<a class="collapse-item" href="{base_url()}tools/tiktokdown">
 					<i class="fas fa-music"></i>
 					<span>Tiktok Downloader</span>
 				</a>
@@ -54,23 +54,23 @@
 		<div id="collapseSEO" class="collapse" data-parent="#accordinSidebar">
 			<div class="collapse-inner rounded py-2 bg-light">
 				<h5 class="collapse-header">SEO Tools</h5>
-				<a href="/tools/frewproxy" class="collapse-item">
+				<a href="{base_url()}tools/freeproxy" class="collapse-item">
 					<i class="fal fa-shield-alt fa-fw"></i>
 					<span>Free Proxy</span>
 				</a>
-				<a href="/tools/whois" class="collapse-item">
+				<a href="{base_url()}tools/whois" class="collapse-item">
 					<i class="fal fa-fw fa-globe"></i>
 					<span>Whois Lookup</span>
 				</a>
-				<a href="/tools/reverseip" class="collapse-item">
+				<a href="{base_url()}tools/reverseip" class="collapse-item">
 					<ion-icon name="arrow-redo-outline"></ion-icon>
 					<span>Reverse IP</span>
 				</a>
-				<a href="/tools/dns" class="collapse-item">
+				<a href="{base_url()}tools/dns" class="collapse-item">
 					<i class="fal fa-fw fa-globe"></i>
 					<span>DNS Lookup</span>
 				</a>
-				<a href="/tools/portscanner" class="collapse-item">
+				<a href="{base_url()}tools/portscanner" class="collapse-item">
 					<i class="fal fa-eye fa-fw"></i>
 					<span>Port Scanner</span>
 				</a>
@@ -86,11 +86,11 @@
 		<div id="collapseSpam" class="collapse" data-parent="#accordinSidebar">
 			<div class="collapse-inner rounded py-2 bg-light">
 				<h5 class="collapse-header">Spam Tools</h5>
-				<a href="/tools/spwhats" class="collapse-item">
+				<a href="{base_url()}tools/spwhats" class="collapse-item">
 					<i class="fab fa-whatsapp"></i>
 					<span>Spam Whatsapp</span>
 				</a>
-				<a class="collapse-item" href="/tools/sms">
+				<a class="collapse-item" href="{base_url()}tools/sms">
 					<i class="fal fa-sms"></i>
 					<span>Sms Gratis</span>
 				</a>
@@ -106,23 +106,23 @@
 		<div id="collapseCrypto" class="collapse" data-parent="#accordinSidebar">
 			<div class="collapse-inner rounded bg-light py-2">
 				<h5 class="collapse-header">Crypto Tools</h5>
-				<a class="collapse-item" href="/tools/base64">
+				<a class="collapse-item" href="{base_url()}tools/base64">
 					<i class="fal fa-fingerprint fa-fw"></i>
 					<span>Base64 Tools</span>
 				</a>
-				<a class="collapse-item" href="/tools/md5">
+				<a class="collapse-item" href="{base_url()}tools/md5">
 					<i class="fal fa-key fa-fw"></i>
 					<span>MD5 Tools</span>
 				</a>
-				<a class="collapse-item" href="/tools/hash">
+				<a class="collapse-item" href="{base_url()}tools/hash">
 					<i class="fal fa-search fa-fw"></i>
 					<span>Hash identifier</span>
 				</a>
-				<a class="collapse-item" href="/tools/enc">
+				<a class="collapse-item" href="{base_url()}tools/enc">
 					<i class="fal fa-fw fa-lock"></i>
 					<span>PHP Encryption</span>
 				</a>
-				<a class="collapse-item" href="/tools/genhash">
+				<a class="collapse-item" href="{base_url()}tools/genhash">
 					<ion-icon name="finger-print-outline"></ion-icon>
 					<span>Generate Hash</span>
 				</a>
@@ -138,39 +138,39 @@
 		<div id="collapseDefacer" class="collapse" data-parent="#accordinSidebar">
 			<div class="collapse-inner rounded bg-light pl-0">
 				<h5 class="collapse-header">Defacer Tools</h5>
-				<a class="collapse-item" href="/tools/csrf">
+				<a class="collapse-item" href="{base_url()}tools/csrf">
 					<i class="far fa-fw fa-bug"></i>
 					<span>CSRF Online</span>
 				</a>
-				<a class="collapse-item" href="/tools/balibang">
+				<a class="collapse-item" href="{base_url()}tools/balibang">
 					<i class="fal fa-fw fa-syringe fa-rotate-180"></i>
 					<span>Balibang Auto Sqli</span>
 				</a>
-				<a class="collapse-item" href="/tools/webdav.php">
-					<ion-icon src="{$tools ? '../' }assets/icons/webdav.svg"></ion-icon>
+				<a class="collapse-item" href="{base_url()}tools/webdav.php">
+					<ion-icon src="{base_url()}assets/icons/webdav.svg"></ion-icon>
 					<span>WebDav Deface</span>
 				</a>
-				<a class="collapse-item" href="/tools/drupal.php">
+				<a class="collapse-item" href="{base_url()}tools/drupal.php">
 					<i class="fal fa-syringe fa-fw fa-rotate-180"></i>
 					<span>Drupal Exploit</span>
 				</a>
-				<a class="collapse-item" href="/tools/hackbar.php">
+				<a class="collapse-item" href="{base_url()}tools/hackbar.php">
 					<i class="far fa-fw fa-skull"></i>
 					<span>Hackbar</span>
 				</a>
-				<a class="collapse-item" href="/tools/lokoexpoit.php">
+				<a class="collapse-item" href="{base_url()}tools/lokoexpoit.php">
 					<i class="fal fa-syringe fa-fw fa-rotate-180"></i>
 					<span>Lokmed Auto Exploit</span>
 				</a>
-				<a class="collapse-item" href="/tools/wpbrute.php">
+				<a class="collapse-item" href="{base_url()}tools/wpbrute.php">
 					<i class="fab fa-fw fa-wordpress"></i>
 					<span>WP BruteForce</span>
 				</a>
-				<a class="collapse-item" href="/tools/kcfinder.php">
+				<a class="collapse-item" href="{base_url()}tools/kcfinder.php">
 					<i class="fal fa-syringe fa-fw fa-rotate-180"></i>
 					<span>Kcfinder Exploiter</span>
 				</a>
-				<a class="collapse-item" href="/tools/adfin.php">
+				<a class="collapse-item" href="{base_url()}tools/adfin.php">
 					<i class="fal fa-search fa-fw"></i>
 					<span>Admin Finder</span>
 				</a>
@@ -186,12 +186,12 @@
 		<div id="collapseProgrammer" class="collapse" data-parent="#accordinSidebar">
 			<div class="collapse-inner rounded py-2 bg-light">
 				<h5 class="collapse-header">Programmer Tools</h5>
-				<a class="collapse-item" href="/tools/editor.php">
+				<a class="collapse-item" href="{base_url()}tools/editor.php">
 					<ion-icon name="create-outline"></ion-icon>
 					<span>Live Editor</span>
 				</a>
-				<a class="collapse-item" href="/tools/jso.php">
-					<ion-icon src="{$tools ? '../' }assets/icons/puzzle.svg"></ion-icon>
+				<a class="collapse-item" href="{base_url()}tools/jso.php">
+					<ion-icon src="{base_url()}assets/icons/puzzle.svg"></ion-icon>
 					<span>JSO Creator</span>
 				</a>
 			</div>
