--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,60 +86,7 @@ ion-icon {
   z-index: 1001;
   --loading-bg: #4e73df;
 }
-
-#loader-wrapper .loader {
-  display: block;
-  border: 3px solid transparent;
-  border-top-color: #e67e22;
-  width: 150px;
-  height: 150px;
-  border-radius: 50%;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  margin: -75px 0 0 -75px;
-  animation: spin 3s linear infinite;
-  z-index: 1002;
-  transition: all 0.5s ease-in-out;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-#loader-wrapper .loader::before {
-  content: '';
-  position: absolute;
-  top: 7px;
-  left: 7px;
-  right: 7px;
-  bottom: 7px;
-  border: 3px solid transparent;
-  border-radius: 50%;
-  border-top-color: #d60331;
-  animation: spin 2s ease-in-out infinite;
-  animation-delay: 0.5s;
-}
-
-#loader-wrapper .loader::after {
-  content: '';
-  position: absolute;
-  top: 21px;
-  left: 21px;
-  right: 21px;
-  bottom: 21px;
-  border: 3px solid transparent;
-  border-radius: 50%;
-  border-top-color: #00cec9;
-  animation: spin 1.5s ease-in-out infinite;
-}
-
-#loader-wrapper .loader-sec-right,
-#loader-wrapper .loader-sec-left {
+#loader-wrapper .loader-sec-right, #loader-wrapper .loader-sec-left {
   position: fixed;
   width: 100%;
   height: 50%;
@@ -147,15 +94,44 @@ ion-icon {
   z-index: 1000;
   transition: all 100ms 0.5s ease-in-out;
 }
-
 #loader-wrapper .loader-sec-right {
   top: 0;
   left: 0;
 }
-
 #loader-wrapper .loader-sec-left {
   right: 0;
   bottom: 0;
+}
+#loader-wrapper .loader {
+  width: 150px;
+  display: block;
+  z-index: 1002;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: all 0.5s ease-in-out;
+}
+#loader-wrapper .loader svg {
+  margin: auto;
+  background: none;
+  display: block;
+  shape-rendering: auto;
+  animation-play-state: running;
+  animation-delay: 0s;
+  width: 144px;
+  height: 144px;
+}
+#loader-wrapper .loader svg path {
+  transform: scale(1);
+  transform-origin: 50px 50px;
+  animation-play-state: running;
+  animation-delay: 0s;
+  fill: none;
+  stroke: #000;
+  stroke-width: 4;
+  stroke-linecap: round;
+  stroke-dasharray: 205.271142578125 51.317785644531256;
 }
 
 .loaded #loader-wrapper {
@@ -163,17 +139,14 @@ ion-icon {
   transition: all 150ms 1s ease-in-out;
   transform: translateX(-100%);
 }
-
 .loaded #loader-wrapper .loader-sec-right {
   transition: all 0.5s 0.5s ease-in-out;
   transform: translateY(-100%);
 }
-
 .loaded #loader-wrapper .loader-sec-left {
   transition: all 0.5s 0.5s ease-in-out;
   transform: translateY(100%);
 }
-
 .loaded #loader-wrapper .loader {
   opacity: 0;
   visibility: hidden;
@@ -768,17 +741,17 @@ a.fab {
 
 .btn-instagram {
   color: #fff;
-  background-color: #E1306C;
+  background: #E1306C linear-gradient(180deg, #e64f82, #E1306C) repeat-x;
   border-color: #E1306C;
 }
 .btn-instagram:hover {
   color: #fff;
-  background-color: #cd1e59;
+  background: #cd1e59 linear-gradient(180deg, #d54072, #cd1e59) repeat-x;
   border-color: #c21c54;
 }
 .btn-instagram:focus, .btn-instagram.focus {
   color: #fff;
-  background-color: #cd1e59;
+  background: #cd1e59 linear-gradient(180deg, #d54072, #cd1e59) repeat-x;
   border-color: #c21c54;
   box-shadow: 0 0 0 0.2rem rgba(230, 79, 130, 0.5);
 }
@@ -786,10 +759,12 @@ a.fab {
   color: #fff;
   background-color: #E1306C;
   border-color: #E1306C;
+  background-image: none;
 }
 .btn-instagram:not(:disabled):not(.disabled):active, .btn-instagram:not(:disabled):not(.disabled).active, .show > .btn-instagram.dropdown-toggle {
   color: #fff;
   background-color: #c21c54;
+  background-image: none;
   border-color: #b71a4f;
 }
 .btn-instagram:not(:disabled):not(.disabled):active:focus, .btn-instagram:not(:disabled):not(.disabled).active:focus, .show > .btn-instagram.dropdown-toggle:focus {
@@ -798,17 +773,17 @@ a.fab {
 
 .btn-twitter {
   color: #fff;
-  background-color: #00ACEE;
+  background: #00ACEE linear-gradient(180deg, #26b8f1, #00ACEE) repeat-x;
   border-color: #00ACEE;
 }
 .btn-twitter:hover {
   color: #fff;
-  background-color: #0090c8;
+  background: #0090c8 linear-gradient(180deg, #26a1d0, #0090c8) repeat-x;
   border-color: #0087bb;
 }
 .btn-twitter:focus, .btn-twitter.focus {
   color: #fff;
-  background-color: #0090c8;
+  background: #0090c8 linear-gradient(180deg, #26a1d0, #0090c8) repeat-x;
   border-color: #0087bb;
   box-shadow: 0 0 0 0.2rem rgba(38, 184, 241, 0.5);
 }
@@ -816,10 +791,12 @@ a.fab {
   color: #fff;
   background-color: #00ACEE;
   border-color: #00ACEE;
+  background-image: none;
 }
 .btn-twitter:not(:disabled):not(.disabled):active, .btn-twitter:not(:disabled):not(.disabled).active, .show > .btn-twitter.dropdown-toggle {
   color: #fff;
   background-color: #0087bb;
+  background-image: none;
   border-color: #007eae;
 }
 .btn-twitter:not(:disabled):not(.disabled):active:focus, .btn-twitter:not(:disabled):not(.disabled).active:focus, .show > .btn-twitter.dropdown-toggle:focus {
@@ -828,17 +805,17 @@ a.fab {
 
 .btn-whatsapp {
   color: #fff;
-  background-color: #25D366;
+  background: #25D366 linear-gradient(180deg, #46da7d, #25D366) repeat-x;
   border-color: #25D366;
 }
 .btn-whatsapp:hover {
   color: #fff;
-  background-color: #1fb256;
+  background: #1fb256 linear-gradient(180deg, #41be6f, #1fb256) repeat-x;
   border-color: #1da851;
 }
 .btn-whatsapp:focus, .btn-whatsapp.focus {
   color: #fff;
-  background-color: #1fb256;
+  background: #1fb256 linear-gradient(180deg, #41be6f, #1fb256) repeat-x;
   border-color: #1da851;
   box-shadow: 0 0 0 0.2rem rgba(70, 218, 125, 0.5);
 }
@@ -846,10 +823,12 @@ a.fab {
   color: #fff;
   background-color: #25D366;
   border-color: #25D366;
+  background-image: none;
 }
 .btn-whatsapp:not(:disabled):not(.disabled):active, .btn-whatsapp:not(:disabled):not(.disabled).active, .show > .btn-whatsapp.dropdown-toggle {
   color: #fff;
   background-color: #1da851;
+  background-image: none;
   border-color: #1b9d4c;
 }
 .btn-whatsapp:not(:disabled):not(.disabled):active:focus, .btn-whatsapp:not(:disabled):not(.disabled).active:focus, .show > .btn-whatsapp.dropdown-toggle:focus {
@@ -858,17 +837,17 @@ a.fab {
 
 .btn-facebook {
   color: #fff;
-  background-color: #3B5998;
+  background: #3B5998 linear-gradient(180deg, #5872a7, #3B5998) repeat-x;
   border-color: #3B5998;
 }
 .btn-facebook:hover {
   color: #fff;
-  background-color: #30497c;
+  background: #30497c linear-gradient(180deg, #4f6490, #30497c) repeat-x;
   border-color: #2d4373;
 }
 .btn-facebook:focus, .btn-facebook.focus {
   color: #fff;
-  background-color: #30497c;
+  background: #30497c linear-gradient(180deg, #4f6490, #30497c) repeat-x;
   border-color: #2d4373;
   box-shadow: 0 0 0 0.2rem rgba(88, 114, 167, 0.5);
 }
@@ -876,10 +855,12 @@ a.fab {
   color: #fff;
   background-color: #3B5998;
   border-color: #3B5998;
+  background-image: none;
 }
 .btn-facebook:not(:disabled):not(.disabled):active, .btn-facebook:not(:disabled):not(.disabled).active, .show > .btn-facebook.dropdown-toggle {
   color: #fff;
   background-color: #2d4373;
+  background-image: none;
   border-color: #293e6a;
 }
 .btn-facebook:not(:disabled):not(.disabled):active:focus, .btn-facebook:not(:disabled):not(.disabled).active:focus, .show > .btn-facebook.dropdown-toggle:focus {
@@ -888,17 +869,17 @@ a.fab {
 
 .btn-google-plus {
   color: #fff;
-  background-color: #dd4b39;
+  background: #dd4b39 linear-gradient(180deg, #e26657, #dd4b39) repeat-x;
   border-color: #dd4b39;
 }
 .btn-google-plus:hover {
   color: #fff;
-  background-color: #cd3623;
+  background: #cd3623 linear-gradient(180deg, #d55444, #cd3623) repeat-x;
   border-color: #c23321;
 }
 .btn-google-plus:focus, .btn-google-plus.focus {
   color: #fff;
-  background-color: #cd3623;
+  background: #cd3623 linear-gradient(180deg, #d55444, #cd3623) repeat-x;
   border-color: #c23321;
   box-shadow: 0 0 0 0.2rem rgba(226, 102, 87, 0.5);
 }
@@ -906,10 +887,12 @@ a.fab {
   color: #fff;
   background-color: #dd4b39;
   border-color: #dd4b39;
+  background-image: none;
 }
 .btn-google-plus:not(:disabled):not(.disabled):active, .btn-google-plus:not(:disabled):not(.disabled).active, .show > .btn-google-plus.dropdown-toggle {
   color: #fff;
   background-color: #c23321;
+  background-image: none;
   border-color: #b7301f;
 }
 .btn-google-plus:not(:disabled):not(.disabled):active:focus, .btn-google-plus:not(:disabled):not(.disabled).active:focus, .show > .btn-google-plus.dropdown-toggle:focus {
@@ -918,17 +901,17 @@ a.fab {
 
 .btn-youtube {
   color: #fff;
-  background-color: #e52d27;
+  background: #e52d27 linear-gradient(180deg, #e94d47, #e52d27) repeat-x;
   border-color: #e52d27;
 }
 .btn-youtube:hover {
   color: #fff;
-  background-color: #cd1e19;
+  background: #cd1e19 linear-gradient(180deg, #d5403c, #cd1e19) repeat-x;
   border-color: #c21d17;
 }
 .btn-youtube:focus, .btn-youtube.focus {
   color: #fff;
-  background-color: #cd1e19;
+  background: #cd1e19 linear-gradient(180deg, #d5403c, #cd1e19) repeat-x;
   border-color: #c21d17;
   box-shadow: 0 0 0 0.2rem rgba(233, 77, 71, 0.5);
 }
@@ -936,10 +919,12 @@ a.fab {
   color: #fff;
   background-color: #e52d27;
   border-color: #e52d27;
+  background-image: none;
 }
 .btn-youtube:not(:disabled):not(.disabled):active, .btn-youtube:not(:disabled):not(.disabled).active, .show > .btn-youtube.dropdown-toggle {
   color: #fff;
   background-color: #c21d17;
+  background-image: none;
   border-color: #b61b16;
 }
 .btn-youtube:not(:disabled):not(.disabled):active:focus, .btn-youtube:not(:disabled):not(.disabled).active:focus, .show > .btn-youtube.dropdown-toggle:focus {
@@ -948,17 +933,17 @@ a.fab {
 
 .btn-github {
   color: #fff;
-  background-color: #333333;
+  background: #333333 linear-gradient(180deg, #525252, #333333) repeat-x;
   border-color: #333333;
 }
 .btn-github:hover {
   color: #fff;
-  background-color: #202020;
+  background: #202020 linear-gradient(180deg, #414141, #202020) repeat-x;
   border-color: #1a1a1a;
 }
 .btn-github:focus, .btn-github.focus {
   color: #fff;
-  background-color: #202020;
+  background: #202020 linear-gradient(180deg, #414141, #202020) repeat-x;
   border-color: #1a1a1a;
   box-shadow: 0 0 0 0.2rem rgba(82, 82, 82, 0.5);
 }
@@ -966,10 +951,12 @@ a.fab {
   color: #fff;
   background-color: #333333;
   border-color: #333333;
+  background-image: none;
 }
 .btn-github:not(:disabled):not(.disabled):active, .btn-github:not(:disabled):not(.disabled).active, .show > .btn-github.dropdown-toggle {
   color: #fff;
   background-color: #1a1a1a;
+  background-image: none;
   border-color: #131313;
 }
 .btn-github:not(:disabled):not(.disabled):active:focus, .btn-github:not(:disabled):not(.disabled).active:focus, .show > .btn-github.dropdown-toggle:focus {
