--- a/assets/scss/_form.scss
+++ b/assets/scss/_form.scss
@@ -10,7 +10,7 @@
 		&.is-invalid {
 			border-color: #ff5e57;
 			padding-right: calc(1.6em + 0.85rem);
-			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' aria-hidden='true' focusable='false' width='15' height='15' style='-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);' preserveAspectRatio='xMidYMid meet' viewBox='0 0 24 24'%3E%3Cpath d='M8.27 3L3 8.27v7.46L8.27 21h7.46C17.5 19.24 21 15.73 21 15.73V8.27L15.73 3M9.1 5h5.8L19 9.1v5.8L14.9 19H9.1L5 14.9V9.1m6 5.9h2v2h-2v-2m0-8h2v6h-2V7' fill='%23ff3f34'/%3E%3C/svg%3E");
+			background-image: $form-is-invalid;
 			background-repeat: no-repeat;
 			background-position: right calc(0.375em + 0.1880rem) center;
 			background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
@@ -22,7 +22,7 @@
 		&.is-valid {
 			border-color: #0be881;
 			padding-right: calc(1.6em + 0.85rem);
-			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' aria-hidden='true' focusable='false' width='12' height='12' style='-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);' preserveAspectRatio='xMidYMid meet' viewBox='0 0 24 24'%3E%3Cpath d='M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10s10-4.5 10-10S17.5 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8s8 3.59 8 8s-3.59 8-8 8m4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4l8-8l-1.41-1.42z' fill='%230be881'/%3E%3C/svg%3E");
+			background-image: $form-is-valid;
 			background-repeat: no-repeat;
 			background-position: right calc(0.375em + 0.1880rem) center;
 			background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
@@ -41,7 +41,7 @@
 	&.dark {
 		color: #f1f2f6;
 		border-color: #6b6d7d;
-		background: #213040 url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23f1f2f6' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px;
+		background: #213040 $custom-select-background  no-repeat right 0.75rem center/8px 10px;
 		&:focus {
 			border-color: #4e73df;
 			box-shadow: 0 0 0 0.25rem rgba(46, 89, 217, 0.25);
@@ -49,7 +49,7 @@
 		&.is-invalid {
 			border-color: #ff5e57;
 			padding-right: calc(0.75em + 2.3125rem);
-			background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23f1f2f6' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' aria-hidden='true' focusable='false' width='15' height='15' style='-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);' preserveAspectRatio='xMidYMid meet' viewBox='0 0 24 24'%3E%3Cpath d='M8.27 3L3 8.27v7.46L8.27 21h7.46C17.5 19.24 21 15.73 21 15.73V8.27L15.73 3M9.1 5h5.8L19 9.1v5.8L14.9 19H9.1L5 14.9V9.1m6 5.9h2v2h-2v-2m0-8h2v6h-2V7' fill='%23ff3f34'/%3E%3C/svg%3E") #213040 no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+			background: $custom-select-is-invalid;
 			&:focus {
 				border-color: #ff5e57;
 				box-shadow: 0 0 0 0.25rem rgba(255, 63, 52, 0.3);
@@ -58,7 +58,7 @@
 		&.is-valid {
 			border-color: #0be881;
 			padding-right: calc(0.75em + 2.3125rem);
-			background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23f1f2f6' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' aria-hidden='true' focusable='false' width='12' height='12' style='-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);' preserveAspectRatio='xMidYMid meet' viewBox='0 0 24 24'%3E%3Cpath d='M12 2C6.5 2 2 6.5 2 12s4.5 10 10 10s10-4.5 10-10S17.5 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8s8 3.59 8 8s-3.59 8-8 8m4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4l8-8l-1.41-1.42z' fill='%230be881'/%3E%3C/svg%3E") #213040 no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+			background: $custom-select-is-valid;
 			&:focus {
 				border-color: #0be881;
 				box-shadow: 0 0 0 0.25rem rgba(5, 196, 107, 0.3)
