--- a/templates/index.latte
+++ b/templates/index.latte
@@ -11,7 +11,7 @@
 					<div class="row no-gutters align-items-center">
 						<div class="col mr-2">
 							<div class="text-xs font-weight-bold text-info text-uppercase mb-1">Pengunjung</div>
-							<div class="h5 mb-0 font-weight-bold" id="visitor">{$visitor}</div>
+							<div class="h5 mb-0 font-weight-bold" id="visitor">0</div>
 						</div>
 						<div class="col-auto">
 							<i class="far fa-eye fa-2x"></i>
@@ -26,7 +26,7 @@
 					<div class="row no-gutters align-items-center">
 						<div class="col mr-2">
 							<div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Shared</div>
-							<div class="h5 mb-0 font-weight-bold" id="shared">10</div>
+							<div class="h5 mb-0 font-weight-bold" id="shared">0</div>
 						</div>
 						<div class="col-auto">
 							<i class="fal fa-share-square fa-2x"></i>
@@ -56,7 +56,7 @@
 					<div class="row no-gutters align-items-center">
 						<div class="col mr-2">
 							<div class="text-xs font-weight-bold text-danger text-uppercase mb-1">Dislike</div>
-							<div class="h5 mb-0 font-weight-bold" id="dislike">3</div>
+							<div class="h5 mb-0 font-weight-bold" id="dislike">0</div>
 						</div>
 						<div class="col-auto">
 							<i class="fal fa-thumbs-down fa-2x"></i>
@@ -65,14 +65,14 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-md-12 mx-auto">
+		<div class="col-md-12 mx-auto col-lg-11">
 			<div class="home mb-4">
 				<div class="home-header">
 					<h1 class="mb-4 home-heading text-center">Welcome To Bcc Web Tools</h1>
 				</div>
 				<div class="home-content">
 					<div class="home-brand">
-						<img class="home-brand-profile" src="assets/img/logo.jpg" alt="Logo">
+						<img class="home-brand-profile" src="{base_url()}assets/img/logo.jpg" alt="Logo">
 					</div>
 					<h3 class="home-content-title">BlackCoderCrush</h3>
 					<p class="home-content-slogan">Lets Play And Make A Change!</p>
@@ -126,7 +126,7 @@
 						<ul class="home-list" id="donasi">
 							<li class="home-list-item">
 								<a class="home-list-item-link" href="" target="_blank">
-									<ion-icon src="{$tools ? '../'}assets/icons/gopay.svg"></ion-icon>
+									<ion-icon src="{base_url()}assets/icons/gopay.svg"></ion-icon>
 									<span>Gopay</span>
 								</a>
 							</li>
@@ -138,13 +138,13 @@
 							</li>
 							<li class="home-list-item">
 								<a class="home-list-item-link" href="" target="_blank">
-									<ion-icon src="{$tools ? '../'}assets/icons/dana.svg"></ion-icon>
+									<ion-icon src="{base_url()}assets/icons/dana.svg"></ion-icon>
 									<span>Dana</span>
 								</a>
 							</li>
 							<li class="home-list-item">
 								<a class="home-list-item-link" href="" target="_blank">
-									<ion-icon src="{$tools ? '../'}assets/icons/ovo.svg"></ion-icon>
+									<ion-icon src="{base_url()}assets/icons/ovo.svg"></ion-icon>
 									<span>OVO</span>
 								</a>
 							</li>
@@ -157,7 +157,7 @@
 					<h6 class="home-heading ml-3"><i class="fal fa-info-circle text-info"></i> About</h6>
 				</div>
 				<div class="home-content">
-					<div class="home-brand"><img class="img-fluid px-4 px-sm-3 mt-3 mb-4" src="{$tools ? '../'}assets/img/onlenpage.png" alt="Brand"></div>
+					<div class="home-brand"><img class="img-fluid px-4 px-sm-3 mt-3 mb-4" src="{base_url()}assets/img/onlenpage.png" alt="Brand"></div>
 					<div class="home-body">
 						<p>WebTools adalah sebuah website yang menyedia berbagai tools - tools yang mungkin bisa anda manfaat kan <br>
 							untuk perkerjaan anda atau untuk hal yang lain nya
@@ -183,30 +183,32 @@
 					</h6>
 				</div>
 				<div class="home-content">
-					<div class="home-brand"><img class="img-fluid px-4 px-sm-3 mt-3 mb-4" src="{$tools ? '../'}assets/img/feedback.png" alt="Brand"></div>
+					<div class="home-brand"><img class="img-fluid px-4 px-sm-3 mt-3 mb-4" src="{base_url()}assets/img/feedback.png" alt="Brand"></div>
 					<div class="home-body">
 						<div class="row">
 							<div class="col-xs-3 col-md-6 mx-auto">
 								<div class="col-auto">
 									<h1 class="h4">Suka dengan website kami ?</h1>
-									<button type="button" name="likebtn" id="likebtn" class="btn btn-primary"><i class="fal fa-thumbs-up mr-2"></i>Like</button>
-									<button type="button" name="dislikebtn" id="dislikebtn" class="btn btn-danger"><i class="fal fa-thumbs-down mr-2"></i>Dislike</button>
+									<div class="mr-2" id="boxbtn">
+										<button type="button" name="likebtn" id="likebtn" class="btn mr-2 btn-secondary"><i class="fal fa-thumbs-up mr-2"></i>Like</button>
+										<button type="button" name="dislikebtn" id="dislikebtn" class="btn btn-secondary"><i class="fal fa-thumbs-down mr-2"></i>Dislike</button>
+									</div>
 								</div>
-								<!-- <div class="col-auto mt-3"> -->
-								<!--   <h1 class="h4">Share ke teman - teman kalian</h1> -->
-								<!--   <a class="btn btn-facebook btn-circle" href=""> -->
-								<!--     <i class="fab fa-facebook-f"></i> -->
-								<!--   </a> -->
-								<!--   <a class="btn btn-whatsapp btn-circle" href="whatsapp://send?text=Hai+cobain+yuk+WebTools+Ini+yang+dibuat+oleh+team+BlackCoderCrush%0AWebsite+ini+sangat+membantu+ku+ayo+buruan+coba+link+ada+dibawah+ini+%0Ahttps://bccwebtools.herokuapp.com"> -->
-								<!--     <i class="fab fa-whatsapp"></i> -->
-								<!--   </a> -->
-								<!--   <a class="btn btn-instagram btn-circle" href=""> -->
-								<!--     <i class="fab fa-instagram"></i> -->
-								<!--   </a> -->
-								<!--   <a class="btn btn-twitter btn-circle" href=""> -->
-								<!--     <i class="fab fa-twitter"></i> -->
-								<!--   </a> -->
-								<!-- </div> -->
+								<div class="col-auto mt-3">
+									<h1 class="h4">Share ke teman - teman kalian</h1>
+									<a class="btn btn-facebook btn-circle" href="">
+										<i class="fab fa-facebook-f"></i>
+									</a>
+									<a class="btn btn-whatsapp btn-circle" href="whatsapp://send?text=Hai+cobain+yuk+WebTools+Ini+yang+dibuat+oleh+team+BlackCoderCrush%0AWebsite+ini+sangat+membantu+ku+ayo+buruan+coba+link+ada+dibawah+ini+%0Ahttps://bccwebtools.herokuapp.com">
+										<i class="fab fa-whatsapp"></i>
+									</a>
+									<a class="btn btn-instagram btn-circle" href="">
+										<i class="fab fa-instagram"></i>
+									</a>
+									<a class="btn btn-twitter btn-circle" href="">
+										<i class="fab fa-twitter"></i>
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
