--- a/templates/layout/_navbar.latte
+++ b/templates/layout/_navbar.latte
@@ -13,7 +13,8 @@
 			</a>
 			<div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in">
 				<h6 class="dropdown-header">
-					New Updates
+					<i class="fal fa-sync fa-fw mr-2"></i>
+					Notifikasi
 				</h6>
 				<!-- <a class="dropdown-item d-flex align-items-center" href="#"> -->
 				<!--   <div class="mr-3"> -->
@@ -26,6 +27,7 @@
 				<!--     <span class="font-weight-bold">New Tools Admin Finder</span> -->
 				<!--   </div> -->
 				<!-- </a> -->
+				<a class="dropdown-item text-center small text-gray-600" href="#">Tidak ada Notifikasi</a>
 			</div>
 		</li>
 		<div class="darkmode">
@@ -38,12 +40,12 @@
 		<div class="topbar-divider d-sm-block"></div>
 		<li class="nav-item dropdown no-arrow">
 			<a class="nav-link dropdown-toggle" data-toggle="dropdown">
-				<img src="{$tools ? '../'}assets/img/logo.jpg" alt="Logo" class="img-profile shadow">
+				<img src="{base_url()}assets/img/logo.jpg" alt="Logo" class="img-profile shadow">
 			</a>
 			<div class="dropdown-menu dropdown-menu-right shadow animated--grow-in">
 				<h5 class="dropdown-header">Social Media</h5>
 				<a class="dropdown-item" href="http://blackcodercrush.rf.gd" target="_blank">
-					<ion-icon src="{$tools ?  '../'}assets/icons/profileweb.svg" style="font-size: 20px"></ion-icon>
+					<ion-icon src="{base_url()}assets/icons/profileweb.svg" style="font-size: 20px"></ion-icon>
 					<span>Website Profile</span>
 				</a>
 				<a class="dropdown-item" href="https://www.instagram.com/blackcodercrush" target="_blank">
